final team management code

--- a/app/templates/account_confirmation.html
+++ b/app/templates/account_confirmation.html
@@ -35,7 +35,7 @@
         <p>Thank you for verifying your account. We are really excited to have you in {{ app_name }} family.</p>
         <p>Your account have been activated now. You can sign-in now using below button.</p>
         <p>
-            <a href="{{loginUrl}}" target="_blank" class="button">Sign In</a>
+            <--a href="{{loginUrl}}" target="_blank" class="button">Sign In</--a>
         </p>
         <p>Thank you for choosing us!</p>
         <p>Best Regards,<br>{{ app_name }}</p>
